--- a/index.html
+++ b/index.html
@@ -1,139 +1,141 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home-work-5</title>
-  </head>
-  <body>
-    <!-- header -->
-    <header>
-      <a href="#"> Web<span>Studio</span></a>
-      <nav>
-        <ul>
-          <li><a href="#">Студіо</a></li>
-          <li><a href="./src/pages/portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакт</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-    <!-- main -->
-    <main>
-      <!-- section1 -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button>Замовити послугу</button>
-      </section>
-      <!-- section2 -->
-      <section>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!-- section3 -->
-      <section>
-        <h2>Чим ми займаємося</h2>
+<html lang="uk">
 
-        <ul>
-          <li>
-            <div>
-              <img src="./src/images/work/html.jpg" alt="програмування" />
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="./src/images/work/phone.jpg" alt="служба підтримки" />
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="./src/images/work/drawing.jpg" alt="дизайнер" />
-            </div>
-          </li>
-        </ul>
-      </section>
-      <!-- section4 -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <article>
-              <div>
-                <img src="./src/images/team/igor.jpg" alt="Ігор Дем'яненко" />
-              </div>
-              <h3>Ігор Дем'яненко</h3>
-              <p>Product Designer</p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <div>
-                <img src="./src/images/team/olga.jpg" alt="Ольга Рєпіна" />
-              </div>
-              <h3>Ольга Рєпіна</h3>
-              <p>Frontend Developer</p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <div>
-                <img src="./src/images/team/mukola.jpg" alt="Микола Тарасов" />
-              </div>
-              <h3>Микола Тарасов</h3>
-              <p>Marketing</p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <div>
-                <img
-                  src="./src/images/team/mihaylo.jpg"
-                  alt="Михайло Єрмаков"
-                />
-              </div>
-              <h3>Михайло Єрмаков</h3>
-              <p>UI Designer</p>
-            </article>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!-- footer -->
-    <footer>
-      <a href="#">Web<span>Studio</span></a>
-      <p>м. Київ, пр-т Лесі Українки, 26</p>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WebStudio</title>
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+  <!-- header -->
+  <header class="header">
+    <a href="#" class="logo">Web<span>Studio</span></a>
+    <nav>
+      <ul class="nav-list">
+        <li><a href="#">Студіо</a></li>
+        <li><a href="./src/pages/portfolio.html">Портфоліо</a></li>
+        <li><a href="#">Контакт</a></li>
       </ul>
-    </footer>
-  </body>
+    </nav>
+    <ul class="contact-list">
+      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+  </header>
+  <!-- main -->
+  <main>
+    <!-- section1 -->
+    <section class="hero">
+      <h1>Ефективні рішення для вашого бізнесу</h1>
+      <button class="btn">Замовити послугу</button>
+    </section>
+    <!-- section2 -->
+    <section class="features">
+      <ul class="features-list">
+        <li>
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p>
+            Ідейні міркування, і навіть початок повсякденної роботи з
+            формування позиції.
+          </p>
+        </li>
+        <li>
+          <h3>ПУНКТУАЛЬНІСТЬ</h3>
+          <p>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне
+            у себе.
+          </p>
+        </li>
+        <li>
+          <h3>ПЛАНУВАННЯ</h3>
+          <p>
+            Так само консультація з широким активом значною мірою зумовлює.
+          </p>
+        </li>
+        <li>
+          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p>
+            Значимість цих проблем настільки очевидна, що реалізація планових
+            завдань.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <!-- section3 -->
+    <section class="work">
+      <h2>Чим ми займаємося</h2>
+      <ul class="work-list">
+        <li>
+          <div>
+            <img src="./src/images/work/html.jpg" alt="програмування" />
+          </div>
+        </li>
+        <li>
+          <div>
+            <img src="./src/images/work/phone.jpg" alt="служба підтримки" />
+          </div>
+        </li>
+        <li>
+          <div>
+            <img src="./src/images/work/drawing.jpg" alt="дизайнер" />
+          </div>
+        </li>
+      </ul>
+    </section>
+    <!-- section4 -->
+    <section class="team">
+      <h2>Наша команда</h2>
+      <ul class="team-list">
+        <li>
+          <article>
+            <div>
+              <img src="./src/images/team/igor.jpg" alt="Ігор Дем'яненко" />
+            </div>
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <div>
+              <img src="./src/images/team/olga.jpg" alt="Ольга Рєпіна" />
+            </div>
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <div>
+              <img src="./src/images/team/mukola.jpg" alt="Микола Тарасов" />
+            </div>
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </article>
+        </li>
+        <li>
+          <article>
+            <div>
+              <img src="./src/images/team/mihaylo.jpg" alt="Михайло Єрмаков" />
+            </div>
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </article>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <!-- footer -->
+  <footer class="footer">
+    <a href="#" class="logo">Web<span>Studio</span></a>
+    <p>м. Київ, пр-т Лесі Українки, 26</p>
+    <ul class="contact-list">
+      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+  </footer>
+</body>
+
 </html>
